fix buttons on mobile

--- a/src/style.scss
+++ b/src/style.scss
@@ -42,6 +42,7 @@
 .slideNavButton {
   display: inline-block;
   position: relative;
+  flex: 0 0 25px;
   width: 25px;
   height: 25px;
   border: 1px solid var(--wp--preset--color--formo-cream);
@@ -53,7 +54,7 @@
 .slideNavButton:last-child {
   margin-right: 0;
 }
-.button-active {
+.slideNavButton.button-active {
   background-color: var(--wp--preset--color--formo-cream);
 }
 @media screen and (max-width: 782px){
@@ -71,6 +72,7 @@
     text-align: right;
   }
   .slideNavButton {
+    flex: 0 0 clamp(20px, 5vw, 45px);
     width: clamp(20px, 5vw, 45px);
     height: clamp(20px, 5vw, 45px);
   }
